--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -48,7 +48,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+font-0 = JetbrainsMono Nerd Font;2
 
 modules-left = xworkspaces xwindow
 modules-right = pulseaudio memory cpu battery date
@@ -129,8 +129,8 @@ label = %percentage:2%%
 type = internal/battery
 battery = BAT1
 adapter = ADP1
-label-charging = Chargement %percentage%%
-label-discharging = Déchargement %percentage%%
+label-charging = 󱐋 %percentage%%
+label-discharging = %percentage%%
 
 [module/date]
 type = internal/date
